--- a/manifests.json
+++ b/manifests.json
@@ -165,6 +165,10 @@
       "@type": "sc:Manifest",
       "label": "A Duet for two Performers on one Piano Forte or Harpsichord"
     }, {
+      "@id": "http://sanddragon.bl.uk/IIIFMetadataService/egerton_ms_3512.json",
+      "@type": "sc:Manifest",
+      "label": "Egerton MS 3512"
+    }, {
       "@id": "http://files.universalviewer.io/manifests/adiks/Add_11831.json",
       "@type": "sc:Manifest",
       "label": "Add_11831 (3D)",
