--- a/two-up-config.json
+++ b/two-up-config.json
@@ -3,7 +3,7 @@
     "headerPanelEnabled": true,
     "leftPanelEnabled": true,
     "rightPanelEnabled": true,
-    "searchWithinEnabled": true
+    "searchWithinEnabled": false
   },
   "modules": {
     "contentLeftPanel": {
