--- a/uv/package.json
+++ b/uv/package.json
@@ -21,15 +21,10 @@
   "homepage": "https://github.com/universalviewer/universalviewer",
   "devDependencies": {
     "async": "^0.9.0",
-    "base-component": "viewdir/base-component#es6",
     "chalk": "^0.5.1",
     "cucumber": "^0.4.5",
-    "eventemitter2": "^1.0.3",
-    "exjs": "BSick7/exjs",
-    "extensions": "edsilv/extensions#es6",
-    "glob": "^4.3.5",
     "glob-array": "^0.1.2",
-    "grunt": "^0.4.5",
+    "glob": "^4.3.5",
     "grunt-contrib-clean": "~0.4.0",
     "grunt-contrib-compress": "~0.5.2",
     "grunt-contrib-concat": "^1.0.1",
@@ -41,33 +36,40 @@
     "grunt-sync": "^0.2.3",
     "grunt-text-replace": "~0.3.7",
     "grunt-ts": "^6.0.0-beta.11",
+    "grunt": "^0.4.5",
     "hooker": "^0.2.3",
-    "http-status-codes": "edsilv/http-status-codes#v0.0.5",
-    "iiif-gallery-component": "viewdir/iiif-gallery-component#v1.0.8",
-    "iiif-metadata-component": "viewdir/iiif-metadata-component#v1.0.11",
-    "iiif-tree-component": "viewdir/iiif-tree-component#v1.0.8",
-    "jquery-plugins": "edsilv/jquery-plugins#es6",
-    "jquery-tiny-pubsub": "edsilv/jquery-tiny-pubsub",
     "json-schema-generator": "krg7880/json-schema-generator",
-    "key-codes": "edsilv/key-codes#v0.0.6",
     "less": "^2.4.0",
-    "lodash": "^3.1.0",
-    "manifesto": "viewdir/manifesto#es6",
-    "manifold": "viewdir/manifold#es6",
     "ncp": "^2.0.0",
-    "openseadragon": "^2.2.1",
     "protractor": "1.3.1",
-    "requirejs": "2.2.0",
-    "three.js": "^0.73.0",
     "typescript": "^2.1.6",
-    "typings": "^2.1.0",
-    "utils": "edsilv/utils#es6",
-    "virtex3d": "edsilv/virtex#dev"
+    "typings": "^2.1.0"
   },
   "dependencies": {
     "@types/lodash": "^4.14.53",
     "@types/modernizr": "^3.2.29",
     "@types/requirejs": "^2.1.28",
-    "@types/three": "^0.83.4"
+    "@types/three": "^0.83.4",
+    "base-component": "viewdir/base-component#es6",
+    "core-js": "^2.4.1",
+    "exjs": "BSick7/exjs",
+    "extensions": "edsilv/extensions#es6",
+    "http-status-codes": "edsilv/http-status-codes#v0.0.5",
+    "iiif-gallery-component": "viewdir/iiif-gallery-component#v1.0.8",
+    "iiif-metadata-component": "viewdir/iiif-metadata-component#v1.0.11",
+    "iiif-tree-component": "viewdir/iiif-tree-component#v1.0.8",
+    "jquery": "^3.1.1",
+    "jquery-plugins": "edsilv/jquery-plugins#es6",
+    "jquery-tiny-pubsub": "edsilv/jquery-tiny-pubsub",
+    "jsviews": "^0.9.83",
+    "key-codes": "edsilv/key-codes#v0.0.6",
+    "lodash": "^3.1.0",
+    "manifesto": "viewdir/manifesto#es6",
+    "manifold": "viewdir/manifold#es6",
+    "openseadragon": "^2.2.1",
+    "requirejs": "2.2.0",
+    "three.js": "^0.73.0",
+    "utils": "edsilv/utils#es6",
+    "virtex3d": "edsilv/virtex#dev"
   }
 }
