--- a/uv/package.json
+++ b/uv/package.json
@@ -23,8 +23,9 @@
     "async": "^0.9.0",
     "chalk": "^0.5.1",
     "cucumber": "^0.4.5",
-    "glob-array": "^0.1.2",
     "glob": "^4.3.5",
+    "glob-array": "^0.1.2",
+    "grunt": "^0.4.5",
     "grunt-contrib-clean": "~0.4.0",
     "grunt-contrib-compress": "~0.5.2",
     "grunt-contrib-concat": "^1.0.1",
@@ -36,17 +37,16 @@
     "grunt-sync": "^0.2.3",
     "grunt-text-replace": "~0.3.7",
     "grunt-ts": "^6.0.0-beta.11",
-    "grunt": "^0.4.5",
     "hooker": "^0.2.3",
     "json-schema-generator": "krg7880/json-schema-generator",
     "less": "^2.4.0",
+    "lodash": "^4.17.4",
     "ncp": "^2.0.0",
     "protractor": "1.3.1",
     "typescript": "^2.1.6",
     "typings": "^2.1.0"
   },
   "dependencies": {
-    "@types/lodash": "^4.14.53",
     "@types/modernizr": "^3.2.29",
     "@types/requirejs": "^2.1.28",
     "@types/three": "^0.83.4",
@@ -58,17 +58,16 @@
     "iiif-gallery-component": "viewdir/iiif-gallery-component#v1.0.8",
     "iiif-metadata-component": "viewdir/iiif-metadata-component#v1.0.11",
     "iiif-tree-component": "viewdir/iiif-tree-component#v1.0.8",
-    "jquery": "^3.1.1",
+    "jquery": "^2.2.4",
     "jquery-plugins": "edsilv/jquery-plugins#es6",
     "jquery-tiny-pubsub": "edsilv/jquery-tiny-pubsub",
     "jsviews": "^0.9.83",
     "key-codes": "edsilv/key-codes#v0.0.6",
-    "lodash": "^3.1.0",
     "manifesto": "viewdir/manifesto#es6",
     "manifold": "viewdir/manifold#es6",
     "openseadragon": "^2.2.1",
     "requirejs": "2.2.0",
-    "three.js": "^0.73.0",
+    "three": "edsilv/three.js#draco",
     "utils": "edsilv/utils#es6",
     "virtex3d": "edsilv/virtex#dev"
   }
