--- a/uv/package.json
+++ b/uv/package.json
@@ -52,7 +52,7 @@
     "@types/three": "^0.83.4",
     "base-component": "viewdir/base-component#es6",
     "core-js": "^2.4.1",
-    "exjs": "BSick7/exjs",
+    "exjs": "BSick7/exjs#0.5.0",
     "extensions": "edsilv/extensions#es6",
     "http-status-codes": "edsilv/http-status-codes#v0.0.5",
     "iiif-gallery-component": "viewdir/iiif-gallery-component#v1.0.8",
