added annotations field

--- a/uv/package.json
+++ b/uv/package.json
@@ -66,8 +66,8 @@
     "jquery-tiny-pubsub": "edsilv/jquery-tiny-pubsub",
     "jsviews": "^0.9.83",
     "key-codes": "edsilv/key-codes#v0.0.6",
-    "manifesto.js": "viewdir/manifesto#es6",
-    "manifold": "viewdir/manifold#es6",
+    "manifesto.js": "viewdir/manifesto#auth1",
+    "manifold": "viewdir/manifold#auth1",
     "mediaelement": "^4.0.2",
     "openseadragon": "^2.2.1",
     "pdfobject": "^2.0",
