--- a/manifests.json
+++ b/manifests.json
@@ -724,6 +724,12 @@
           "@type": "sc:Manifest",
           "label": "All Metadata",
           "visible": true
+        },
+        {
+          "@id": "manifest/defaultextension.json",
+          "@type": "sc:Manifest",
+          "label": "Default Extension",
+          "visible": true
         }
       ]
     },
