--- a/uv/package.json
+++ b/uv/package.json
@@ -68,7 +68,7 @@
     "key-codes": "edsilv/key-codes#v0.0.6",
     "manifesto.js": "viewdir/manifesto#auth1",
     "manifold": "viewdir/manifold#auth1",
-    "mediaelement": "^4.0.2",
+    "mediaelement": "4.0.2",
     "openseadragon": "^2.2.1",
     "pdfobject": "^2.0",
     "requirejs": "2.2.0",
