--- a/uv/package.json
+++ b/uv/package.json
@@ -53,29 +53,29 @@
     "@types/modernizr": "^3.2.29",
     "@types/requirejs": "^2.1.28",
     "@types/three": "^0.83.4",
-    "base-component": "viewdir/base-component#es6",
+    "base-component": "viewdir/base-component#v1.1.0",
     "core-js": "^2.4.1",
     "exjs": "BSick7/exjs#0.5.0",
-    "extensions": "edsilv/extensions#es6",
+    "extensions": "edsilv/extensions#v0.2.0",
     "http-status-codes": "edsilv/http-status-codes#v0.0.5",
-    "iiif-gallery-component": "viewdir/iiif-gallery-component#v1.0.8",
-    "iiif-metadata-component": "viewdir/iiif-metadata-component#v1.0.11",
-    "iiif-tree-component": "viewdir/iiif-tree-component#v1.0.8",
+    "iiif-gallery-component": "viewdir/iiif-gallery-component#v1.1.0",
+    "iiif-metadata-component": "viewdir/iiif-metadata-component#v1.1.0",
+    "iiif-tree-component": "viewdir/iiif-tree-component#v1.1.0",
     "jquery": "^2.2.4",
-    "jquery-plugins": "edsilv/jquery-plugins#es6",
-    "jquery-tiny-pubsub": "edsilv/jquery-tiny-pubsub",
+    "jquery-plugins": "edsilv/jquery-plugins#v0.1.0",
+    "jquery-tiny-pubsub": "edsilv/jquery-tiny-pubsub#v0.7.2",
     "jsviews": "^0.9.83",
     "key-codes": "edsilv/key-codes#v0.0.6",
-    "manifesto.js": "viewdir/manifesto#es6",
-    "manifold": "viewdir/manifold#es6",
+    "manifesto.js": "viewdir/manifesto#v2.1.1",
+    "manifold": "viewdir/manifold#v1.2.0",
     "mediaelement": "4.0.2",
     "openseadragon": "^2.2.1",
     "pdfobject": "^2.0",
     "requirejs": "2.2.0",
     "three": "^0.85.2",
-    "utils": "edsilv/utils#es6",
-    "uv-cy-gb-theme": "UniversalViewer/uv-cy-GB-theme#component",
-    "uv-en-gb-theme": "UniversalViewer/uv-en-GB-theme#component",
-    "virtex3d": "edsilv/virtex"
+    "utils": "edsilv/utils#v0.1.0",
+    "uv-cy-gb-theme": "UniversalViewer/uv-cy-gb-theme#v1.1.0",
+    "uv-en-gb-theme": "UniversalViewer/uv-en-gb-theme#v1.1.0",
+    "virtex3d": "edsilv/virtex#v0.3.0"
   }
 }
