--- a/examples-config.json
+++ b/examples-config.json
@@ -14,6 +14,11 @@
       "options": {
         "localeToggleEnabled": false
       }
+    },
+    "seadragonCenterPanel": {
+      "options": {
+        "autoHideControls": false
+      }
     }
   }
 }
