--- a/uv/package.json
+++ b/uv/package.json
@@ -66,7 +66,7 @@
     "jquery-tiny-pubsub": "edsilv/jquery-tiny-pubsub#v0.7.2",
     "jsviews": "^0.9.83",
     "key-codes": "edsilv/key-codes#v0.0.6",
-    "manifesto.js": "viewdir/manifesto#v2.1.3",
+    "manifesto.js": "viewdir/manifesto#auth1",
     "manifold": "viewdir/manifold#v1.2.2",
     "mediaelement": "4.0.2",
     "openseadragon": "^2.2.1",
