--- a/uv/package.json
+++ b/uv/package.json
@@ -58,12 +58,14 @@
     "exjs": "BSick7/exjs#0.5.0",
     "extensions": "edsilv/extensions#v0.2.0",
     "http-status-codes": "edsilv/http-status-codes#v0.0.5",
+    "iiif-av-component": "viewdir/iiif-av-component#master",
     "iiif-gallery-component": "viewdir/iiif-gallery-component#v1.1.0",
     "iiif-metadata-component": "viewdir/iiif-metadata-component#v1.1.0",
     "iiif-tree-component": "viewdir/iiif-tree-component#v1.1.2",
     "jquery": "^2.2.4",
     "jquery-plugins": "edsilv/jquery-plugins#v0.1.0",
     "jquery-tiny-pubsub": "edsilv/jquery-tiny-pubsub#v0.7.2",
+    "jquery-ui-dist": "^1.12.1",
     "jsviews": "^0.9.83",
     "key-codes": "edsilv/key-codes#v0.0.6",
     "manifesto.js": "viewdir/manifesto#v2.1.7",
