--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "universalviewer",
-  "version": "3.0.0",
+  "version": "3.0.1",
   "description": "The Universal Viewer is a community-developed open source project on a mission to help you share your content with the world.",
   "repository": {
     "type": "git",
@@ -19,10 +19,6 @@
     "url": "https://github.com/universalviewer/universalviewer/issues"
   },
   "homepage": "https://github.com/universalviewer/universalviewer",
-  "devDependencies": {
-    
-  },
-  "dependencies": {
-    
-  }
+  "devDependencies": {},
+  "dependencies": {}
 }
