--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "OpenSeadragon",
     "PDF"
   ],
-  "author": "Edward Silverton <ed@edsilv.com> (http://edsilv.com)",
+  "author": "@edsilv",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/universalviewer/universalviewer/issues"
