--- a/manifests.json
+++ b/manifests.json
@@ -771,6 +771,12 @@
           "visible": true
         },
         {
+          "@id": "https://purl.stanford.edu/bh502xm3351/iiif3/manifest",
+          "@type": "sc:Manifest",
+          "label": "Presentation 3 PDF (Stanford)",
+          "visible": true
+        },
+        {
           "@id": "https://edsilv.github.io/test-manifests/pres3-video.json",
           "@type": "sc:Manifest",
           "label": "Presentation 3 Video",
