--- a/template-config.json
+++ b/template-config.json
@@ -14,6 +14,11 @@
       "options": {
         "localeToggleEnabled": false
       }
+    },
+    "contentLeftPanel": {
+      "options": {
+        "defaultToTreeEnabled": true
+      }
     }
   }
 }
