--- a/manifests.json
+++ b/manifests.json
@@ -687,6 +687,12 @@
       "visible": true,
       "manifests": [
         {
+          "@id": "https://edsilv.github.io/biiif-workshop/collection/index.json",
+          "@type": "sc:Manifest",
+          "label": "Cats",
+          "visible": true
+        },
+        {
           "@id": "http://tomcrane.github.io/scratch/manifests/top-to-bottom.json",
           "@type": "sc:Manifest",
           "label": "Top to Bottom",
